Add new complaint view/controller action

--- a/CWAC19Aclu-Mo/Views/Complaints/New.cshtml
+++ b/CWAC19Aclu-Mo/Views/Complaints/New.cshtml
@@ -1,7 +1,4 @@
 ﻿@model CWAC19AcluMo.ViewModels.AddComplaintViewModel
-@{
-    ViewData["Title"] = "AddComplaint";
-}
 
 <h2>AddComplaint</h2>
 
@@ -27,6 +24,7 @@
                 <input id="options-phone" type="checkbox" name="notification" value="phone" />
                 <label for="options-phone">Phone</label>
             </div>
+            <input type="submit" value="Create" />
         </form>
     </div>
 </div>
