Complaint status views/controllers

--- a/CWAC19Aclu-Mo/Views/Complaints/New.cshtml
+++ b/CWAC19Aclu-Mo/Views/Complaints/New.cshtml
@@ -2,8 +2,8 @@
 
 <h2>AddComplaint</h2>
 
-<div class="container">
-    <div class="row">
+<div class="row">
+    <div class="col-sm-4">
         <form method="post" asp-controller="Complaints" asp-action="New">
             <div class="form-group">
                 <label asp-for="Email"></label>
