--- a/CWAC19Aclu-Mo/Views/Complaints/Update.cshtml
+++ b/CWAC19Aclu-Mo/Views/Complaints/Update.cshtml
@@ -1,29 +1,53 @@
-﻿@model CWAC19AcluMo.ViewModels.UpdateViewModel
+﻿@model CWAC19AcluMo.ViewModels.UpdateComplaintViewModel
 
 @{
-    ViewData["Title"] = "Update";
+    ViewData["Title"] = "Update Complaint";
 }
 
 <h2>Update Status</h2>
 
 <div class="container">
     <div class="row">
-        <form method="get">
-            <div class="form-group">
-            <h2>Complaint Email:</h2><br />
-            <input type="text" placeholder="Email Address"/>
-            </div>
-        </form>
+        <div class="col-sm-4">
+            <form method="get" asp-action="Update">
+                <div class="form-group">
+                    <label asp-for="Email"></label>
+                    <input asp-for="Email" class="form-control" placeholder="Email Address"/>
+                </div>
+                <input type="submit" value="Search" />
+            </form>
+        </div>
     </div>
+
+
+    @if (Model.Complaints != null)
+    {
+     <form asp-action="Update" method="post">
+     <div class="row">
+        <div class="col-sm-6">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Complaint No.</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach(var complaint in Model.Complaints)
+                    {
+                        <tr>
+                            <td>@complaint.ComplaintNo</td>
+                            <td>
+                                <select asp-for="StatusCodeID" asp-items="Model.StatusCodes" ></select>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+     </div>
+     <input type="hidden" value="@Model.Email" />
+     <input type="submit" value="Update" />
+     </form>
+    }
 </div>
-
-
-<table class="table">
-
-    <ul>
-        @foreach (var complaint in Model.complaints)
-        {
-        }
-    </ul>
-
-</table>
