--- a/CWAC19Aclu-Mo/Views/Complaints/New.cshtml
+++ b/CWAC19Aclu-Mo/Views/Complaints/New.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CWAC19AcluMo.ViewModels.AddComplaintViewModel
 
-<h2>AddComplaint</h2>
+<h2>Add a New Complaint</h2>
 
 <div class="row">
     <div class="col-sm-4">
