--- a/CWAC19Aclu-Mo/Views/Complaints/Success.cshtml
+++ b/CWAC19Aclu-Mo/Views/Complaints/Success.cshtml
@@ -5,5 +5,5 @@
 
 <h2>Success</h2>
 
-<p>New Client was successfully added!!!</p>
+<p style="text-align: center;">New Client was successfully added!!!</p>
 
