--- a/CWAC19Aclu-Mo/wwwroot/css/site.css
+++ b/CWAC19Aclu-Mo/wwwroot/css/site.css
@@ -19,9 +19,7 @@ body {
 }
 
 /* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
-}
+
 
 /* QR code generator */
 #qrCode {
@@ -35,3 +33,8 @@ body {
         display: none;
     }
 }
+
+h2 {
+    text-align: center;
+}
+
