--- a/CWAC19Aclu-Mo/Views/Complaints/Update.cshtml
+++ b/CWAC19Aclu-Mo/Views/Complaints/Update.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Update Complaint";
 }
 
-<h2>Update Status</h2>
+<h2>Search for Complaint</h2>
 
 <div class="container">
     <div class="row">
