--- a/CWAC19Aclu-Mo/Views/Complaints/View.cshtml
+++ b/CWAC19Aclu-Mo/Views/Complaints/View.cshtml
@@ -5,27 +5,29 @@
 
 <h2>View</h2>
 
-<div class="row justify-content-center">
-    <h3>Viewing Complaints for @Model.Client.Email</h3>
-</div>
+<div class="container">
+    <div class="row justify-content-center">
+        <h3>Viewing Complaints for @Model.Client.Email</h3>
+    </div>
 
-<div class="row justify-content-center">
-    <div class="col-sm-8">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Complaint No.</th>
-                    <th>Complaint Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>@Model.ComplaintNo</td>
-                    <td>
-                        @Model.Status.StatusCode
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="row justify-content-center">
+        <div class="col-sm-8">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Complaint No.</th>
+                        <th>Complaint Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>@Model.ComplaintNo</td>
+                        <td>
+                            @Model.Status.Status
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
