Added Identity for basic authentication

--- a/CWAC19Aclu-Mo/Views/Complaints/Index.cshtml
+++ b/CWAC19Aclu-Mo/Views/Complaints/Index.cshtml
@@ -22,7 +22,7 @@
             <td>@item.Client.Email</td>
             <td>@item.Status.Status</td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a>
+                <a asp-action="Edit" asp-route-id="@item.ID">Update</a>
             </td>
         </tr>
         }
