--- a/CWAC19Aclu-Mo/Views/ComplaintStatus/Details.cshtml
+++ b/CWAC19Aclu-Mo/Views/ComplaintStatus/Details.cshtml
@@ -11,10 +11,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.StatusCode)
+            @Html.DisplayNameFor(model => model.Status)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.StatusCode)
+            @Html.DisplayFor(model => model.Status)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Description)
