--- a/CWAC19Aclu-Mo/Views/ComplaintStatus/Edit.cshtml
+++ b/CWAC19Aclu-Mo/Views/ComplaintStatus/Edit.cshtml
@@ -13,13 +13,13 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="StatusCode" class="control-label"></label>
-                <input asp-for="StatusCode" class="form-control" />
-                <span asp-validation-for="StatusCode" class="text-danger"></span>
+                <label asp-for="Status" class="control-label"></label>
+                <input asp-for="Status" class="form-control" />
+                <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control" ></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="ID" />
