--- a/CWAC19Aclu-Mo/Views/ComplaintStatus/New.cshtml
+++ b/CWAC19Aclu-Mo/Views/ComplaintStatus/New.cshtml
@@ -13,9 +13,9 @@
         <form asp-action="New">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="StatusCode" class="control-label"></label>
-                <input asp-for="StatusCode" class="form-control" />
-                <span asp-validation-for="StatusCode" class="text-danger"></span>
+                <label asp-for="Status" class="control-label"></label>
+                <input asp-for="Status" class="form-control" />
+                <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
