--- a/CWAC19Aclu-Mo/Views/Complaints/Edit.cshtml
+++ b/CWAC19Aclu-Mo/Views/Complaints/Edit.cshtml
@@ -7,6 +7,7 @@
 
 <div class="row">
     <div class="col-sm-4">
+        <div></div>
         <form method="post">
             <div class="form-group">
                 <label asp-for="StatusID"></label>
