--- a/CWAC19Aclu-Mo/wwwroot/css/site.css
+++ b/CWAC19Aclu-Mo/wwwroot/css/site.css
@@ -38,3 +38,28 @@ h2 {
     text-align: center;
 }
 
+.card {
+    position: relative;
+    padding: 25px;
+    margin-bottom: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    background-color: #fff;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+a.card-link {
+    text-decoration: none;
+}
+
+.flex-container {
+    display: flex;
+    justify-content: center;
+}
+
+
+
+
